infrastructure/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tribe-ingress
  namespace: tribe
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /()(.*)
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 80
      - path: /users(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: users
            port:
              number: 80
      - path: /lists(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: lists
            port:
              number: 80
      - path: /activities(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: activities
            port:
              number: 80
      - path: /interests(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: interests
            port:
              number: 80
